static/stylesheets/style.css
/* Universal Styles */
body {
  font-family: Poppins, sans-serif;
  color: #FFF;
  text-align: center;
  line-height: 1.38;
  letter-spacing: 0.4px;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background: gray;
  position: relative;
}

.site-main-background {
  bottom: 0;
  display: block;
  position: fixed;
  height: 49.5vh;
  left: 0;
  right: 0;
  top: 0;
  z-index: -1;
  background-color: gray;
}




/* Icon/Logo */
body div#hoodcast-icon:nth-child(1) {
  align-self: flex-end;
}

div#hoodcast-icon,
a#icon-link {
  margin-right: 15%;
}

div#hoodcast-icon {
  height: 95px;
}

img#main-logo.logo {
  margin: 2rem 0 0 0;
  position: absolute;
  margin-left: auto;
  margin-right: 15%;
}

svg#hoodcast-logo {
  margin: 0.9rem 0 0 0;
}

img#main-logo.logo,
svg#hoodcast-logo {
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  max-width: 200px;
}

svg path {
  width: 100%;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
  stroke: gold;
  fill: gray;
}

g#logo {
  z-index: 1001;
}




/* Container Main */
#container {
  display: none;
  background-color: #FFF;
  color: #000;
  width: 70%;
  margin: 0;
  padding-bottom: 5px;
  border-radius: 10px;
  overflow-y: scroll;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  -ms-overflow-style: none;
}

::-webkit-scrollbar { 
  display: none;
}

#container.new {
  height: 500px;
  max-height: 67%;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  -khtml-border-radius: 10px;
  border: 3px solid #fff;
  behavior: url(css/PIE.htc);
}




/* Search */
#search {
  display: block;
  padding: 32px 0;
  margin: 0 auto;
  width: 100%;
}

#form-panels {
  display: flex;
  flex-direction: column;
}

.hoodcast-search {
  margin: 5px 15px 5px 15px;
  display: inline-block;
}

.hoodcast-search-input {
  width: 250px;
  height: 36px;
  border-radius: 3px;
  padding-left: 50px;
  border: solid 1px #cecccf;
  font-family: Work Sans;
  font-size: 18px;
  font-weight: 500;
  line-height: 1.0;
  letter-spacing: 0.4px;
  padding-top: 5px;
  text-align: left;
  color: #4f4f4f;
  -webkit-user-select: text;
  -moz-user-select: text;
  user-select: text;
  cursor: text;
}

#hoodcast-search-button {
  text-align: center;
  width: 160px;
  height: 65px;
  border-radius: 8px;
  margin-top: 20px;
  background-color: gold;
  border: solid 4px #000;
  font-family: Work Sans;
  line-height: 1.13;
  font-size: 2.5rem;
  color: #000;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

#hoodcast-search-button:hover {
  border: solid 2px #000;
  background-color: gray;
  color: #FFF;
}




/* Metrics */
td.table-descriptor,
td.table-value,
tr.financials td.t-category,
tr.financials td.t-account,
tr.financials td.number {
  vertical-align: middle;
  width: 150px;
  min-width: 150px;
}

h2.subheader {
  font-size: 26px;
  font-weight: 600;
  letter-spacing: 0.6px;
  background-color: #000000;
  color: gold;
  border: 5px solid white;
  border-top: 15px solid white;
  border-radius: 15px;
  padding: 5px;
}

h2#active.subheader {
  border-top: 60px solid white;
}

table {
  width: 100%;
  text-align: center;
}

td.table-descriptor {
  font-size: 14px;
}

td.table-value {
  color: #7A797A;
  font-size: 16px;
  font-family: Work Sans, sans-serif;
  letter-spacing: 0.4px;
}




/* Fin Statements */
div.table-start {
    
}

div.table-container {
  
}

table.hoodcast-table {
  overscroll-behavior: contain;
}

tbody#statement-body {
  top: 0;
  position: -webkit-sticky;
  position: sticky;
}

tbody#statement-body th.t-head,
tbody#statement-body div.tracks {
  overflow-x: scroll;
}

.table-container tbody tr.table-header,
div.tracks tr.financials {
  height: 35px;
  scroll-snap-align: start;
}

tr.table-header.hoodcast-header th.t-head {
  background-color: #FFF;
  vertical-align: text-bottom;
  width: 150px;
  min-width: 150px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
}

tr {
  height: 50px;
}

th.t-head {
  padding-top: 18px;
  font-size: 14px;
}

tr.financials td {
  padding-right: 1rem;
  scroll-snap-align: start;
}

tr.financials td.gold-top {
  text-align: right;
  border-top: solid 3px gold;
}

tr.financials td.t-account {
  text-align: left;
  font-size: 14px;
}

tr.financials td.number {
  text-align: right;
  font-size: 14px;
  font-weight: 300;
}

tr.financials td.sig {
    
}

tr.financials td.row-last {
  border-top: solid 2px #000;
  border-bottom: thick double #000;
}

tr.financials td.neg-red {
  color: red;
}

tr:nth-child(even) {
  background-color: #F5F4F5;
}

td.company-link {
  text-decoration: underline;
}

td.company-link:hover {
  color: gray;
}

.autocomplete {
  position: relative;
}

.autocomplete-items {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 1px solid #d4d4d4;
  border-bottom: none;
  border-top: none;
  margin: 0 auto;
  z-index: 99;
  width: 304px;
  top: 100%;
  left: 0;
  right: 0;
}

.autocomplete-items div {
  padding: 10px;
  width: 100%;
  cursor: pointer;
  background-color: #fff; 
  border-bottom: 1px solid #d4d4d4; 
}

/*when hovering an item:*/
.autocomplete-items div:hover {
  background-color: #e9e9e9; 
}

/*when navigating through the items using the arrow keys:*/
.autocomplete-active {
  background-color: gold !important; 
}

.sort,
.company-link,
a,
a img,
a h2,
#hoodcast-search-button,
g#logo,
svg,
path,
.paths,
img.sortasc,
img.sortdesc {
  cursor: pointer;
}

@media only screen and (max-width: 850px) {
  #container {
    max-width: 92vw;
    width: 780px;
  }
    
  div#hoodcast-icon {
    height: 85px;
  }
    
  svg#hoodcast-logo,
  img#main-logo.logo {
    max-width: 160px;
  }

  img#main-logo.logo {
    margin: 2rem 0 0 0;
    margin-left: auto;
    margin-right: 5%;
  }
    
  div#hoodcast-icon,
  a#icon-link {
    margin-right: 5%;
  }
    
  #hoodcast-search-button {
    width: 180px;
    font-size: 2rem;
  }

  .site-main-background {
    height: 250px;
  }
}

@media only screen and (max-width: 500px) {
  div#hoodcast-icon {
    height: 72px;
  }
    
  svg#hoodcast-logo,
  img#main-logo.logo {
    max-width: 125px;
  }
    
  img#main-logo.logo {
    margin-right: 12%;
  }
    
  div#hoodcast-icon,
  a#icon-link {
    margin-right: 12%;
  }
    
  .hoodcast-search-input {
    width: 200px;
    height: 2rem;
    border-radius: 3px;
    padding-left: 50px;
    font-size: 0.75rem;
    line-height: 0.9;
    letter-spacing: 0.3px;
    padding: 0.1rem 0 0 1rem;
  }
    
  th, td {
    font-size: 12px;
  }

  td.table-descriptor,
  td.table-value,
  tr.financials td.t-category,
  tr.financials td.t-account,
  tr.financials td.number {
    width: 100px;
    min-width: 100px;
    font-size: 12px;
  }

  tr.table-header.hoodcast-header th.t-head {
    width: 100px;
    min-width: 100px;
    font-size: 12px;
  }

  tr.financials td.sig {
    font-size: 14px;
  }

  tr.financials td.row-last {
    font-size: 14px;
  }
    
  .autocomplete-items {
    width: 220px;
    font-size: 0.75rem;
  }
    
  #hoodcast-search-button {
    width: 140px;
    height: 40px;
    font-size: 1.4rem;
  }

  #search {
    padding: 1rem;    
  }
    
  #hoodcast-search-button {
    margin-top: 0.5rem;
  }
}

@media only screen and (max-height: 500px) {
  #container {
    margin-bottom: 25vh;
  }
  
  div#hoodcast-icon {
    height: 72px;
  }
    
  svg#hoodcast-logo,
  img#main-logo.logo {
    max-width: 125px;
  }
    
  .hoodcast-search-input {
    width: 200px;
    height: 2rem;
    border-radius: 3px;
    padding-left: 50px;
    font-size: 0.75rem;
    line-height: 0.9;
    letter-spacing: 0.3px;
    padding: 0.1rem 0 0 1rem;
  }
    
  .autocomplete-items {
    width: 200px;
    font-size: 0.75rem;
  }
    
  #hoodcast-search-button {
    width: 140px;
    height: 40px;
    font-size: 1.4rem;
  }

  #search {
    padding: 1rem;
  }
    
  #hoodcast-search-button {
    margin-top: 0.5rem;
  }
    
  .site-main-background {
    height: 250px;
  }
}

